--- a/Onlyfans1.html
+++ b/Onlyfans1.html
@@ -158,7 +158,7 @@ color:white}
 
     <script>
         function proceedToPayment() {
-            alert("verify your profile to proceed.");
+            alert("verify your profile through the admin to proceed.");
         }
     </script>
 
