--- a/Onlyfans1.html
+++ b/Onlyfans1.html
@@ -23,7 +23,7 @@ color:white}
 <body>
 <h1>OnlyFANS</h1>
 <h4><ins>Verifications to get your Profile :</h4> </ins>
-<p>Hello Catalin Lulian Borous we are doing this to make sure its you. have to pay the sum of €499:00
+<p>Hello Catalin Lulian Borous we are doing this to make sure its you. You have to pay the sum of €499:00
 <br>to the database gatefee payment to verify that you took this actions by yourself
 <br>After paying you will sign on the gate fee form and take it back to the office Thank You.</p>
 <h2>Reviews:</h2>
