--- a/Onlyfans1.html
+++ b/Onlyfans1.html
@@ -28,7 +28,7 @@ color:white}
 <br>After paying you will sign on the gate fee form and take it back to the office Thank You.</p>
 <h2>Reviews:</h2>
 <p> Congratulations on getting your first Profile Mr. Catalin Lulian Borous You are almost there  continue to pay the verification payment and 
-<br>get your profile  done. Your Contents are going to get uploaded withing 24 hours
+<br>get your profile  done. Your Contents are going to get uploaded within 24 hours
 <br> verify your profile and start earning on OnlyFans!. Contact your admin to get you profile verified. </p>
 <html lang="en">
 <head>
